2002-03-31  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* src/gtksourcebuffer.c: (gtk_source_buffer_get_undo_levels),
	(gtk_source_buffer_set_undo_levels): Add undo_levels property.
	* src/gtksourcebuffer.h: Idem.
	* src/gtksourceview.c: (gtk_source_view_expose),
	(gtk_source_view_set_show_line_numbers),
	(gtk_source_view_set_show_line_pixmaps): Fix bug where margin would
	still be visible even though both the line numbers & pixmaps were off.
	* src/gtkundomanager.c: (gtk_undo_manager_get_undo_levels),
	(gtk_undo_manager_set_undo_levels): Add undo_levels property.
	* src/gtkundomanager.h: Idem.
	* src/test-widget.c: (cb_line_numbers_toggle), (main): Add button for
	showing/hiding the line numbers margin.

2002-03-30  Johan Dahlin  <jdahlin@telia.com>

	* src/Makefile.am: Make sure $(BUILD_SOURCES) is built before trying
	to compile other things. Fixes build in automake-1.5 or higher.

2002-03-22  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* src/gtksourcebuffer.c: (add_marker), (add_markers),
	(gtk_source_buffer_line_remove_markers),
	(gtk_source_buffer_get_all_markers): Added
	gtk_source_buffer_get_all_markers method.
	* src/gtksourcebuffer.h: Idem.

2002-03-15  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* aclocal.m4: Newer glib version.
	* configure.in: Added libgnome dependency (i18n).
	* src/Makefile.am: Added new files.
	* src/gtksourcebuffer.c: Cleanup, implemented support for new undo
	manager.
	* src/gtksourcebuffer.h: Idem.
	* src/gtksourceview-marshal.list: Added marshal type for undo/redo
	events.
	* src/gtksourceview.c: (gtk_source_view_populate_popup): Updated to work
	with the new undo API.
	* src/gtkundomanager.c: New GtkUndoManager, copied from gedit.
	* src/gtkundomanager.h: Idem.

2002-02-11  Mikael Hermansson  <tyan@linux.se>

	* gtksourceview.c: remove compile warnings.
	* test-widget.c: remove compile warnings.

2002-02-11  Mikael Hermansson  <tyan@linux.se>

	* ChangeLog: fixed my ugly comments and make it more emacs compatible :-)
